# NeuralNetwork

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pre_commit.sh  pyproject.toml  scripts.py  test.py
Enums/: LayerEnums.py
Layers/: FullyConnectedLayer.py  Layer.py
NeuralNetwork/Model/: Layer.py  Neuron.py
Neuron/: Neuron.py
dataloaders/: __init__.py  csvdataloader.py  dataloader.py  imagedataloader.py
datasets/: __init__.py  csvdataset.py  dataset.py  imagedataset.py
generators/: __init__.py  generators.py
logs/: __init__.py
ncxlib/activations/: __init__.py  activation.py  leaky_relu.py  leaky_relu_test.py  relu.py  relu_test.py  sigmoid.py  sigmoid_test.py  softmax.py  tanh.py
ncxlib/dataloaders/: __init__.py  csvdataloader.py  dataloader.py  imagedataloader.py
ncxlib/datasets/: __init__.py  csvdataset.py  dataset.py  imagedataset.py
ncxlib/evaluation/: __init__.py  balanced.py  classification.py  kfold.py  roc.py  utils.py
ncxlib/generators/: __init__.py  generators.py  region.py
ncxlib/initializers/: __init__.py  he.py  initializer.py  zero.py
ncxlib/losses/: __init__.py  binarycrossentropy.py  categoricalcrossentropy.py  hinge.py  lossfunction.py  meansquarederror.py
ncxlib/models/: __init__.py  model.py
ncxlib/neuralnetwork/: __init__.py
ncxlib/optimizers/: __init__.py  adam.py  optimizer.py  rmsprop.py  sgd.py  sgdmomentum.py
ncxlib/preloaded/: __init__.py  mnist.py
ncxlib/preprocessing/: __init__.py  imagegrayscaler.py  imagerescaler.py  minmaxscaler.py  onehotencoder.py  preprocessor.py
ncxlib/testing/: __init__.py  test_case.py
ncxlib/util/: __init__.py  inspect_mode.py  logs.py  plot.py  preloaded.py  splitter.py  timer.py
ncxlib/visualization/: __init__.py  visualize.py
neuralnetwork/: __init__.py
neuralnetwork/Layers/: FullyConnectedLayer.py  Layer.py  __init__.py  fully_connected_layer.py  fullyconnectedayer.py
neuralnetwork/Neuron/: Neuron.py  __init__.py
neuralnetwork/activations/: __init__.py  activations.py  relu.py  sigmoid.py  softmax.py
neuralnetwork/layers/: __init__.py  fullyconnectedayer.py  fullyconnectedlayer.py  inputlayer.py  layer.py  outputlayer.py
neuralnetwork/losses/: __init__.py  binarycrossentropy.py  categoricalcrossentropy.py  crossentropy.py  losses.py  meansquarederror.py
neuralnetwork/neuralnet/: __init__.py  neuralnetwork.py  nn.py
preprocessing/: __init__.py  imagegrayscaler.py  imagerescaler.py  img_grayscaler.py  minmaxscaler.py  onehotencoder.py  preprocessor.py  scaler.py
scrap-testing/: test_notebook.ipynb
(+39 files in other folders)
