[tool.poetry]
name = "neuralnetwork"
version = "0.1.0"
description = "Neural Network lib for ncxlib"
authors = ["neelthepatel <patel.neel5@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
layer = "python3 NeuralNetwork/Model/Layer.py"
fmt = "scripts:fmt"
