[tool.poetry]
name = "neuralnetwork"
version = "0.1.0"
description = "Neural Network lib for ncxlib"
authors = ["neelthepatel <patel.neel5@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
requests = "^2.32.3"
mkinit = "^1.1.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gen = "scripts:add_init_files"
clean = "scripts:remove_all_init_files"
fmt = "scripts:fmt"
notebook = "scripts:notebook"
