[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ncxlib"
version = "0.3.5"
description = "Neural Network lib for ncxlib"
authors = [ "neelthepatel <patel.neel5@northeastern.edu>", "cwcoogan <coogan.c@northeastern.edu>",]
readme = "README.md"

[tool.isort]
known_third_party = ["numpy"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.26.0, <2.1.0"
nbformat = "^5.10.4"
tqdm = "^4.67.0"
pandas = "^2.2.3"
pillow = "^11.0.0"
h5py = "^3.12.1"
matplotlib = "^3.9.2"
pyvis = "^0.3.2"

[tool.poetry.scripts]
gen = "scripts:add_init_files"
clean = "scripts:clean"
fmt = "scripts:fmt"
notebook = "scripts:notebook"
deploy = "scripts:run_poetry_commands"
test = "scripts:test"
coverage = "scripts:coverage"
check-types = "scripts:check_types"

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "**/__init__.py",
    "**/*test*",
    "**/*plot*",
    "**/*timer*",
    # omit everything in /usr
    "ncxlib/visualization/*",
    "ncxlib/testing/*",
    ]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
jupyterlab = "^4.3.0"
tensorflow = "^2.18.0"
scikit-learn = "^1.5.2"
mkinit = "^1.1.0"
toml = "^0.10.2"
absl-py = "^2.1.0"
pytest = "^8.3.3"
mypy = "^1.13.0"
isort = "^5.13.2"
pytest-cov = "^6.0.0"